// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Button Outline danger renders correctly 1`] = `
<button
  class="btn btn-outline-danger btn-md"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button Outline dark renders correctly 1`] = `
<button
  class="btn btn-outline-dark btn-md"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button Outline info renders correctly 1`] = `
<button
  class="btn btn-outline-info btn-md"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button Outline light renders correctly 1`] = `
<button
  class="btn btn-outline-light btn-md"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button Outline link renders correctly 1`] = `
<button
  class="btn btn-outline-link btn-md"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button Outline primary renders correctly 1`] = `
<button
  class="btn btn-outline-primary btn-md"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button Outline secondary renders correctly 1`] = `
<button
  class="btn btn-outline-secondary btn-md"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button Outline success renders correctly 1`] = `
<button
  class="btn btn-outline-success btn-md"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button Outline warning renders correctly 1`] = `
<button
  class="btn btn-outline-warning btn-md"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button danger renders correctly 1`] = `
<button
  class="btn btn-danger btn-md"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button dark renders correctly 1`] = `
<button
  class="btn btn-dark btn-md"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button info renders correctly 1`] = `
<button
  class="btn btn-info btn-md"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button lg renders correctly 1`] = `
<button
  class="btn btn-primary btn-lg"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button light renders correctly 1`] = `
<button
  class="btn btn-light btn-md"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button link renders correctly 1`] = `
<button
  class="btn btn-link btn-md"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button md renders correctly 1`] = `
<button
  class="btn btn-primary btn-md"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button primary renders correctly 1`] = `
<button
  class="btn btn-primary btn-md"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button secondary renders correctly 1`] = `
<button
  class="btn btn-secondary btn-md"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button sm renders correctly 1`] = `
<button
  class="btn btn-primary btn-sm"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button success renders correctly 1`] = `
<button
  class="btn btn-success btn-md"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button warning renders correctly 1`] = `
<button
  class="btn btn-warning btn-md"
  type="button"
>
  Label
</button>
`;

exports[`OE - Button with icon renders correctly 1`] = `
<button
  class="btn btn-primary btn-md"
  type="button"
>
  Label
  <svg
    class="bi icon--s icon--rotate-90"
  >
    <use
      xlink:href="bootstrap-icons.svg#mouse"
    />
  </svg>
</button>
`;

exports[`OE - Button with toggle renders correctly 1`] = `
<button
  aria-controls="collapseExample"
  aria-expanded="false"
  autocomplete="off"
  class="btn btn-primary btn-md"
  data-bs-target="#collapseExample"
  data-bs-toggle="collapse"
  type="button"
>
  I am a link
</button>
`;
